@@ -8,6 +8,8 @@ Bug fixes:
 ~~~~~~~~~~
 - Fixed the way the render_format is retrieved in the Text Widget. It makes it
   easier to XHTML sanitize.
+- Fixed and made coherent the initialization of the Image Widget and Photo
+  Widget title.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
